test/corpus/L1/negative/unexpected-token-extra-expr.st
"---
id: unexpected-token-extra-expr
kind: negative
phase: parse
layer: L1
spec: anexoA:error.unexpected-token
origin: spec-ANSI
section: error.unexpected-token
note: two consecutive expressions without a separator — second integer is unexpected
codes: E_UNEXPECTED_TOKEN
---"
1 2
